fixing navbar spacing

--- a/src/components/NavBar/components/styles.scss
+++ b/src/components/NavBar/components/styles.scss
@@ -7,7 +7,7 @@
 		margin: 4rem;
 
 		@include md {
-			margin: 2rem 0 0 2rem;
+			margin: 2rem 0 0 1rem;
 		}
 }
 
